2002-04-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* rtems/score/ppc.h: Remove rtems_multilib.
	Add mpc555 (Based on comments from Sergei Organov <osv@javad.ru>).
	* rtems/old-exceptions/cpu.h: Remove _CPU_Data_Cache_Block_Flush.
	Remove _CPU_Data_Cache_Block_Invalidate.

2002-04-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* asm.h: Include cpuopts.h instead of targopts.h.
	* rtems/new-exceptions/cpu.h: Relocated from
	libbsp/powerpc/support/new_exception_processing/rtems/score/cpu.h
	* rtems/old-exceptions/cpu.h: Relocated from
	c/src/lib/libbsp/powerpc/support/old_exception_processing/rtems/score/cpu.h
	* rtems/powerpc/registers.h: Relocated and renamed from
	libcpu/powerpc/shared/include/cpu.h.
	* rtems/score/cpu.h: New.
	* Makefile.am: Reflect changes above.

2001-04-03	Joel Sherrill <joel@OARcorp.com>

	* Per PR94, all rtems/score/CPUtypes.h are named rtems/score/types.h.
	* rtems/score/ppctypes.h: Removed.
	* rtems/score/types.h: New file via CVS magic.
	* Makefile.am, rtems/score/cpu.h: Account for name change.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* Makefile.am: Remove AUTOMAKE_OPTIONS.

2002-01-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect changes from 2002-01-23.

2002-01-23	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* rtems/Makefile.am: Removed.
	* rtems/score/Makefile.am: Removed.
	* configure.ac: Reflect changes above.
	AC_CONFIG_SRCDIR(asm.h).

2002-01-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* rtems/Makefile.am: New.
	* rtems/.cvsignore: New.
	* rtems/score/Makefile.am: New.
	* rtems/score/.cvsignore: New.
	* rtems/score/ppc.h: Relocated from shared/.
	* rtems/score/ppctypes.h: Relocated from shared/.
	* asm.h: Relocated from shared/.
	* shared/Makefile.am: Removed.
	* shared/asm.h: Removed.
	* shared/ppc.h: Removed.
	* shared/ppctypes.h: Removed.
	* shared/.cvsignore: Removed.